--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://www.notion.so/2ce83dad605e44639e0c0fc31334989f?v=375e6ac40eea4bb19a68afe15ecf7e45",
+  "url": "https://www.notion.so/pages-5fe2281932014750987637777792319c",
   "theme": "pure-ejs",
   "previewBrowser": "/usr/bin/chromium",
   "autoSlug": true
